# reading_list

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  app.py  database.db  db.py  i_o.py  models.py  pyproject.toml  run.sh  test.py
.streamlit/: about.py  books.py  config.toml  finished_list.py  reading_list.py  streamilt_app.py
data/: books.csv
data/books/: 1.json  2.json
src/: app.py  classes.py  db.py  i_o.py  init.sh  models.py  test.py  utils.py
src/backend/: app.py  classes.py  db.py  test.py  utils.py
src/frontend/: books.py  finished_list.py  reading_list.py  streamilt_app.py
